# SnapLearnOpenCV

./: README.md
000_hello_opencv/: README.md
000_hello_opencv/CPP/: CMakeLists.txt  hello_opencv.cpp
000_hello_opencv/Python/: hello_opencv.py
001_reading_displaying_write_image/: README.md
001_reading_displaying_write_image/CPP/: CMakeLists.txt  read_display_write_opencv.cpp
001_reading_displaying_write_image/Python/: read_display_write_opencv.py
002_reading_writing_videos/: README.md
002_reading_writing_videos/CPP/video_read_from_file/: CMakeLists.txt  video_read_from_file.cpp
002_reading_writing_videos/CPP/video_read_from_image_sequence/: CMakeLists.txt  video_read_from_image_sequence.cpp
002_reading_writing_videos/CPP/video_read_from_webcam/: CMakeLists.txt  video_read_from_webcam.cpp
002_reading_writing_videos/CPP/video_write_from_webcam/: CMakeLists.txt  video_write_from_webcam.cpp
002_reading_writing_videos/CPP/video_write_to_file/: CMakeLists.txt  README.md  video_write_to_file.cpp
002_reading_writing_videos/Python/: requirements.txt  video_read_from_file.py  video_read_from_image_sequence.py  video_read_from_webcam.py  video_write_from_webcam.py  video_write_to_file.py
003_image_resizing/: README.md
003_image_resizing/CPP/: CMakeLists.txt  image_resize.cpp
003_image_resizing/Python/: image_resize.py
004_cropping_image/: README.md
004_cropping_image/CPP/: CMakeLists.txt  image_crop.cpp
004_cropping_image/CPP/Patching/: CMakeLists.txt  patching.cpp
004_cropping_image/Python/: patching.py
005_rotate_and_translate_image/: README.md
005_rotate_and_translate_image/CPP/rotate_image/: CMakeLists.txt  rotate_image.cpp
005_rotate_and_translate_image/CPP/translate_image/: CMakeLists.txt  translate_image.cpp
005_rotate_and_translate_image/Python/: rotate_image.py  translation_image.py
006_annotating_images/: README.md
006_annotating_images/CPP/: CMakeLists.txt  image_annotation.cpp
006_annotating_images/Python/: image_annotation.py
007_color_spaces/: README.md
007_color_spaces/CPP/: CMakeLists.txt  interactive_color_detect.cpp
007_color_spaces/Python/: data_analysis.py  interactive_color_detect.py  interactive_color_segment.py
008_image_filtering_using_convolution/: README.md
008_image_filtering_using_convolution/CPP/: CMakeLists.txt  image_convolution.cpp
008_image_filtering_using_convolution/Python/: image_convolution.py  requirements.txt
009_image_thresholding/: README.md
009_image_thresholding/CPP/: CMakeLists.txt  image_threshold.cpp
009_image_thresholding/Python/: image_threshold.py  requirements.txt
010_blob_detection/: README.md
010_blob_detection/CPP/: CMakeLists.txt  blob.cpp
010_blob_detection/Python/: blob.py
011_edge_detection/: README.md
011_edge_detection/CPP/: CMakeLists.txt  edge_detection.cpp
011_edge_detection/Python/: edge_detection.py
012_mouse_and_trackbar/: README.md
012_mouse_and_trackbar/CPP/Mouse/: CMakeLists.txt  mouse.cpp
012_mouse_and_trackbar/CPP/Trackbar/: CMakeLists.txt  trackbar.cpp
012_mouse_and_trackbar/Python/: mouse.py  trackbar.py
013_contour_detection/: README.md
013_contour_detection/CPP/contour_approximations/: contour_approx.cpp
013_contour_detection/Python/contour_approximations/: contour_approx.py
014_simple_background_estimation_in_videos/: README.md
014_simple_background_estimation_in_videos/CPP/: CMakeLists.txt  remove_video_bg.cpp
014_simple_background_estimation_in_videos/Python/: remove_video_bg.py  remove_video_bg_save.py
015_deep_learning_with_opencv_dnn_module/: README.md
015_deep_learning_with_opencv_dnn_module/Python/detection/: detect_vid.py
scripts/: install_opencv_for_jetson.sh  install_opencv_for_laptop.sh  requirements.txt
